# rust-mediatest

./: Cargo.toml  README.md  build.rs
examples/: expr.it  slash - a fair warning.it
lib/: openmpt.lib
src/: lib.rs  main.rs  mptdynffi.rs  mptffi2.rs  openmpt_ffi.rs
