[package]
name = "rust-research"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.12"
regex = "0.1.41"
rodio = "0.17.0"
tokio = { version = "1.25.0", features = ["full"] }
openmpt = "0.3.1"
libxm = "1.0.0"
bytemuck = "1.13.0"
hound = "3.1.0"
openmpt-sys = "0.1.0"

[dev-dependencies]

[profile.release]
strip = true
lto = true
codegen-units = 1
